rust/bindings/adbc.rs


 | Field Name | Field Type | Comments |
 |--------------------------|-------------------------|----------|
 | column_name | utf8 not null | |
 | ordinal_position | int32 | (1) |
 | remarks | utf8 | (2) |
 | xdbc_data_type | int16 | (3) |
 | xdbc_type_name | utf8 | (3) |
 | xdbc_column_size | int32 | (3) |
 | xdbc_decimal_digits | int16 | (3) |
 | xdbc_num_prec_radix | int16 | (3) |
 | xdbc_nullable | int16 | (3) |
 | xdbc_column_def | utf8 | (3) |
 | xdbc_sql_data_type | int16 | (3) |
 | xdbc_datetime_sub | int16 | (3) |
 | xdbc_char_octet_length | int32 | (3) |
 | xdbc_is_nullable | utf8 | (3) |
 | xdbc_scope_catalog | utf8 | (3) |
 | xdbc_scope_schema | utf8 | (3) |
 | xdbc_scope_table | utf8 | (3) |
 | xdbc_is_autoincrement | bool | (3) |
 | xdbc_is_generatedcolumn | bool | (3) |

 1. The column's ordinal position in the table (starting from 1).
 2. Database-specific description of the column.
 3. Optional value. Should be null if not supported by the driver.
 xdbc_ values are meant to provide JDBC/ODBC-compatible metadata
 in an agnostic manner.

 CONSTRAINT_SCHEMA is a Struct with fields:

 | Field Name | Field Type | Comments |
 |--------------------------|-------------------------|----------|
 | constraint_name | utf8 | |
 | constraint_type | utf8 not null | (1) |
 | constraint_column_names | list<utf8> not null | (2) |
 | constraint_column_usage | list<USAGE_SCHEMA> | (3) |

 1. One of 'CHECK', 'FOREIGN KEY', 'PRIMARY KEY', or 'UNIQUE'.
 2. The columns on the current table that are constrained, in
 order.
 3. For FOREIGN KEY only, the referenced table and columns.

 USAGE_SCHEMA is a Struct with fields:

 | Field Name | Field Type |
 |--------------------------|-------------------------|
 | fk_catalog | utf8 |
 | fk_db_schema | utf8 |
 | fk_table | utf8 not null |
 | fk_column_name | utf8 not null |

 This AdbcConnection must outlive the returned ArrowArrayStream.

 # Arguments

* `connection` (direction in) - The database connection.
 * `depth` (direction in) - The level of nesting to display. If 0, display
 all levels. If 1, display only catalogs (i.e. catalog_schemas
 will be null). If 2, display only catalogs and schemas
 (i.e. db_schema_tables will be null), and so on.
 * `catalog` (direction in) - Only show tables in the given catalog. If NULL,
 do not filter by catalog. If an empty string, only show tables
 without a catalog. May be a search pattern (see section
 documentation).
 * `db_schema` (direction in) - Only show tables in the given database schema. If
 NULL, do not filter by database schema. If an empty string, only show
 tables without a database schema. May be a search pattern (see section
 documentation).
 * `table_name` (direction in) - Only show tables with the given name. If NULL, do not
 filter by name. May be a search pattern (see section documentation).
 * `table_type` (direction in) - Only show tables matching one of the given table
 types. If NULL, show tables of any type. Valid table types can be fetched
 from GetTableTypes. Terminate the list with a NULL entry.
 * `column_name` (direction in) - Only show columns with the given name. If
 NULL, do not filter by name. May be a search pattern (see
 section documentation).
 * `out` (direction out) - The result set.
 * `error` (direction out) - Error details, if an error occurs.*/
    pub fn AdbcConnectionGetObjects(
        connection: *mut AdbcConnection,
        depth: ::std::os::raw::c_int,
        catalog: *const ::std::os::raw::c_char,
        db_schema: *const ::std::os::raw::c_char,
        table_name: *const ::std::os::raw::c_char,
        table_type: *mut *const ::std::os::raw::c_char,
        column_name: *const ::std::os::raw::c_char,
        out: *mut ArrowArrayStream,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get a string option of the connection.

 This must always be thread-safe (other operations are not), though
 given the semantics here, it is not recommended to call GetOption
 concurrently with itself.

 length must be provided and must be the size of the buffer pointed
 to by value. If there is sufficient space, the driver will copy
 the option value (including the null terminator) to buffer and set
 length to the size of the actual value. If the buffer is too
 small, no data will be written and length will be set to the
 required length.

 In other words:

 - If output length <= input length, value will contain a value
 with length bytes.
 - If output length > input length, nothing has been written to
 value.

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `connection` (direction in) - The database connection.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `length` (direction in, out) - The length of value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcConnectionGetOption(
        connection: *mut AdbcConnection,
        key: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_char,
        length: *mut usize,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get a bytestring option of the connection.

 This must always be thread-safe (other operations are not), though
 given the semantics here, it is not recommended to call
 GetOptionBytes concurrently with itself.

 length must be provided and must be the size of the buffer pointed
 to by value. If there is sufficient space, the driver will copy
 the option value to buffer and set length to the size of the
 actual value. If the buffer is too small, no data will be written
 and length will be set to the required length.

 In other words:

 - If output length <= input length, value will contain a value
 with length bytes.
 - If output length > input length, nothing has been written to
 value.

 For standard options, drivers must always support getting the
 option value (if they support getting option values at all) via
 the type specified in the option. (For example, an option set via
 SetOptionDouble must be retrievable via GetOptionDouble.) Drivers
 may also support getting a converted option value via other
 getters if needed. (For example, getting the string
 representation of a double option.)

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `connection` (direction in) - The connection.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `length` (direction in, out) - The option value length.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcConnectionGetOptionBytes(
        connection: *mut AdbcConnection,
        key: *const ::std::os::raw::c_char,
        value: *mut u8,
        length: *mut usize,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get an integer option of the connection.

 This must always be thread-safe (other operations are not).

 For standard options, drivers must always support getting the
 option value (if they support getting option values at all) via
 the type specified in the option. (For example, an option set via
 SetOptionDouble must be retrievable via GetOptionDouble.) Drivers
 may also support getting a converted option value via other
 getters if needed. (For example, getting the string
 representation of a double option.)

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `connection` (direction in) - The database connection.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcConnectionGetOptionInt(
        connection: *mut AdbcConnection,
        key: *const ::std::os::raw::c_char,
        value: *mut i64,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get a double option of the connection.

 This must always be thread-safe (other operations are not).

 For standard options, drivers must always support getting the
 option value (if they support getting option values at all) via
 the type specified in the option. (For example, an option set via
 SetOptionDouble must be retrievable via GetOptionDouble.) Drivers
 may also support getting a converted option value via other
 getters if needed. (For example, getting the string
 representation of a double option.)

 > Available since: ADBC API revision 1.1.0
 # Arguments

* `connection` (direction in) - The database connection.
 * `key` (direction in) - The option to get.
 * `value` (direction out) - The option value.
 * `error` (direction out) - An optional location to return an error
 message if necessary.
 # Returns

ADBC_STATUS_NOT_FOUND if the option is not recognized.*/
    pub fn AdbcConnectionGetOptionDouble(
        connection: *mut AdbcConnection,
        key: *const ::std::os::raw::c_char,
        value: *mut f64,
        error: *mut AdbcError,
    ) -> AdbcStatusCode;
}
extern "C" {
    /**Get statistics about the data distribution of table(s).

 The result is an Arrow dataset with the following schema:

 | Field Name | Field Type |
 |--------------------------|----------------------------------|
 | catalog_name | utf8 |
 | catalog_db_schemas | list<DB_SCHEMA_SCHEMA> not null |

 DB_SCHEMA_SCHEMA is a Struct with fields:

 | Field Name | Field Type |
 |--------------------------|----------------------------------|
 | db_schema_name | utf8 |
 | db_schema_statistics | list<STATISTICS_SCHEMA> not null |

 STATISTICS_SCHEMA is a Struct with fields:

 | Field Name | Field Type | Comments |
 |--------------------------|----------------------------------| -------- |
 | table_name | utf8 not null | |
 | column_name | utf8 | (1) |
 | statistic_key | int16 not null | (2) |
 | statistic_value | VALUE_SCHEMA not null | |
 | statistic_is_approximate | bool not null | (3) |

 1. If null, then the statistic applies to the entire table.
 2. A dictionary-encoded statistic name (although we do not use the Arrow
 dictionary type). Values in [0, 1024) are reserved for ADBC. Other
 values are for implementation-specific statistics. For the definitions
 of predefined statistic types, see adbc-table-statistics. To get
 driver-specific statistic names, use AdbcConnectionGetStatisticNames.
 3. If true, then the value is approximate or best-effort.

 VALUE_SCHEMA is a dense union with members:

 | Field Name | Field Type |
 |--------------------------|----------------------------------|
 | int64 | int64 |
 | uint64 | uint64 |
 | float64 | float64 |
 | binary | binary |

 This AdbcConnection must outlive the returned ArrowArrayStream.

 > Available since: ADBC API revision 1.1.0
 # Arguments
